--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,18 +5,19 @@
     "moduleResolution": "node",
     "module": "es6",
     "target": "es5",
+    "declaration": true,
+    "removeComments": true,
     "lib": [
       "es6",
       "dom"
     ],
     "typeRoots": [
-      "./src/types"
+      "src/types"
     ]
   },
-  "include": [
-    "src/**/*"
-  ],
+
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "demo/*"
   ]
 }
