--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
-  }
+  },
+  "files": [
+    "/dist",
+    "/README.md",
+    "/LICENSE"
+  ]
 }
