Adjusted grecaptcha types

--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -14,10 +14,9 @@
   },
 
   "include": [
-    "src/**/*",
+    "src/**/*"
   ],
   "exclude": [
-    "node_modules",
-    "demo/*"
+    "node_modules"
   ]
 }
