--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,3 +19,4 @@ jobs:
         yarn install
     - name: Crypress tests
       uses: docker://cypress/browsers:chrome69
+      entrypoint: ['yarn', 'cypress:run']
