--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -19,5 +19,6 @@ jobs:
         yarn install
     - name: Crypress tests
       uses: docker://cypress/browsers:chrome69
-      run: |
-        yarn cypress:run
+      with:
+        entrypoint: yarn
+        args: cypress:run
