--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
     - name: Use Node.js 10.16.x
       uses: actions/setup-node@v1
       with:
-        version: 10.16.x
+        node-version: 10.16.x
     - name: Install dependencies
       run: |
         yarn install
