--- a/package.json
+++ b/package.json
@@ -31,7 +31,14 @@
   "devDependencies": {
     "@auritylab/tslint-config-base": "^1.0.1",
     "@cypress/webpack-preprocessor": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "2",
     "cypress": "^3.4.1",
+    "eslint": "6",
+    "eslint-config-standard-with-typescript": "^9.0.0",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-node": "9",
+    "eslint-plugin-promise": "4",
+    "eslint-plugin-standard": "4",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.1.2",
     "typescript": "^3.6.3",
