--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   "types": "dist/ReCaptcha.d.ts",
   "scripts": {
     "build": "tsc",
-    "cypress:open": "cypress open",
+    "lint": "eslint src/**/*.ts",
     "cypress:run": "cypress run",
+    "cypress:open": "cypress open",
     "demo": "webpack-dev-server --config demo/webpack.config.js --progress --public --host 0.0.0.0 --port 30399"
   },
   "devDependencies": {
