chore(lint): add demo and cypress tsconfig.json

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,10 @@
 {
   "extends": "standard-with-typescript",
   "parserOptions": {
-    "project": "./tsconfig.json"
+    "project": [
+      "./tsconfig.json",
+      "./demo/tsconfig.json",
+      "./cypress/tsconfig.json"
+    ]
   }
 }
