--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "types": "dist/ReCaptcha.d.ts",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint \"src/*\"",
+    "lint": "eslint \"src/**/*.ts\" \"demo/**/*.ts\" \"cypress/**/*.ts\"",
     "cypress:run": "cypress run",
     "cypress:open": "cypress open",
     "demo": "webpack-dev-server --config demo/webpack.config.js --progress --public --host 0.0.0.0 --port 30399"
