chore: disable "@typescript-eslint/strict-boolean-expressions"
Disable the rule because it disallows truthy checks

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,8 @@
       "./demo/tsconfig.json",
       "./cypress/tsconfig.json"
     ]
+  },
+  "rules": {
+    "@typescript-eslint/strict-boolean-expressions": "off"
   }
 }
