--- a/package.json
+++ b/package.json
@@ -31,14 +31,10 @@
   },
   "devDependencies": {
     "@cypress/webpack-preprocessor": "^4.1.5",
-    "@typescript-eslint/eslint-plugin": "2",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "cypress": "^4.5.0",
     "eslint": "6",
-    "eslint-config-standard-with-typescript": "^11.0.1",
-    "eslint-plugin-import": "2",
-    "eslint-plugin-node": "11",
-    "eslint-plugin-promise": "4",
-    "eslint-plugin-standard": "4",
     "html-webpack-plugin": "^4.3.0",
     "ts-loader": "^7.0.4",
     "typescript": "^3.9.2",
