--- a/package.json
+++ b/package.json
@@ -30,15 +30,15 @@
     "demo": "webpack-dev-server --config demo/webpack.config.js --progress --public --host 0.0.0.0 --port 30399"
   },
   "devDependencies": {
-    "@cypress/webpack-preprocessor": "^4.1.5",
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
+    "@cypress/webpack-preprocessor": "^5.9.0",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
     "cypress": "^7.5.0",
-    "eslint": "6",
+    "eslint": "^7.29.0",
     "html-webpack-plugin": "^4.5.2",
-    "ts-loader": "^8.1.0",
+    "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
-    "webpack": "^4.46.0",
+    "webpack": "^5.39.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   }
