--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": "../node_modules",
     "target": "es5",
-    "lib": ["es6", "dom"],
-    "types": ["cypress"]
+    "lib": ["es5", "dom"],
+    "types": ["cypress", "node"]
   },
   "include": [
     "**/*.ts"
