--- a/package.json
+++ b/package.json
@@ -24,21 +24,35 @@
   "types": "dist/ReCaptcha.d.ts",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint \"src/**/*.ts\" \"demo/**/*.ts\" \"cypress/**/*.ts\"",
+    "eslint:check": "eslint '{src,demo,cypress}/**/*.{js,ts}' --no-error-on-unmatched-pattern",
+    "prettier:check": "prettier --check '{src,demo,cypress}/**/*.{ts,js}' --no-error-on-unmatched-pattern",
+    "prettier:fix": "prettier --write '{src,demo,cypress}/**/*.{ts,js}' --no-error-on-unmatched-pattern",
     "cypress:run": "cypress run",
     "cypress:open": "cypress open",
-    "demo": "webpack-dev-server --config demo/webpack.config.js --progress --public --host 0.0.0.0 --port 30399"
+    "demo": "webpack-dev-server --config demo/webpack.config.js --progress --port 30399"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "chai": "^4.3.6",
     "cypress": "^10.2.0",
-    "eslint": "^7.32.0",
+    "eslint": "^8.18.0",
+    "eslint-config-alloy": "^4.5.1",
     "html-webpack-plugin": "^5.5.0",
-    "ts-loader": "^9.3.0",
-    "typescript": "^4.7.3",
+    "prettier": "^2.7.1",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "alloy",
+      "alloy/typescript"
+    ],
+    "env": {
+      "mocha": true
+    }
   }
 }
