--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,11 +1,9 @@
 {
-  "compilerOptions": {
-    "baseUrl": "../node_modules",
-    "target": "es5",
-    "lib": ["es5", "dom"],
-    "types": ["cypress", "node"]
-  },
-  "include": [
-    "**/*.ts"
-  ]
+	"compilerOptions": {
+		"baseUrl": "../node_modules",
+		"target": "es5",
+		"lib": ["es5", "dom"],
+		"types": ["cypress", "node"]
+	},
+	"include": ["**/*.ts"]
 }
