--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -1,22 +1,15 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist/",
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "module": "es6",
-    "target": "es5",
-    "declaration": true,
-    "removeComments": true,
-    "lib": [
-      "es6",
-      "dom"
-    ]
-  },
+	"compilerOptions": {
+		"outDir": "./dist/",
+		"noImplicitAny": true,
+		"moduleResolution": "node",
+		"module": "es6",
+		"target": "es5",
+		"declaration": true,
+		"removeComments": true,
+		"lib": ["es6", "dom"]
+	},
 
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+	"include": ["src/**/*"],
+	"exclude": ["node_modules"]
 }
