--- a/package.json
+++ b/package.json
@@ -1,58 +1,62 @@
 {
-  "name": "recaptcha-v3",
-  "version": "1.10.0",
-  "keywords": [
-    "captcha",
-    "recaptcha",
-    "recaptcha-v3"
-  ],
-  "bugs": {
-    "url": "https://github.com/AurityLab/recaptcha-v3/issues"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/AurityLab/recaptcha-v3"
-  },
-  "license": "Apache-2.0",
-  "author": "AurityLab <info@auritylab.com>",
-  "files": [
-    "/dist",
-    "/README.md",
-    "/LICENSE"
-  ],
-  "main": "dist/ReCaptcha.js",
-  "types": "dist/ReCaptcha.d.ts",
-  "scripts": {
-    "build": "tsc",
-    "eslint:check": "eslint '{src,demo,cypress}/**/*.{js,ts}' --no-error-on-unmatched-pattern",
-    "prettier:check": "prettier --check '{src,demo,cypress}/**/*.{ts,js}' --no-error-on-unmatched-pattern",
-    "prettier:fix": "prettier --write '{src,demo,cypress}/**/*.{ts,js}' --no-error-on-unmatched-pattern",
-    "cypress:run": "cypress run",
-    "cypress:open": "cypress open",
-    "demo": "webpack-dev-server --config demo/webpack.config.js --progress --port 30399"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.0",
-    "chai": "^4.3.6",
-    "cypress": "^10.3.0",
-    "eslint": "^8.19.0",
-    "eslint-config-alloy": "^4.6.0",
-    "html-webpack-plugin": "^5.5.0",
-    "prettier": "^2.7.1",
-    "ts-loader": "^9.3.1",
-    "typescript": "^4.7.4",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
-  },
-  "eslintConfig": {
-    "extends": [
-      "alloy",
-      "alloy/typescript"
-    ],
-    "env": {
-      "mocha": true
-    }
-  }
+	"name": "recaptcha-v3",
+	"version": "1.10.0",
+	"keywords": [
+		"captcha",
+		"recaptcha",
+		"recaptcha-v3"
+	],
+	"bugs": {
+		"url": "https://github.com/AurityLab/recaptcha-v3/issues"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/AurityLab/recaptcha-v3"
+	},
+	"license": "Apache-2.0",
+	"author": "AurityLab <info@auritylab.com>",
+	"files": [
+		"/dist",
+		"/README.md",
+		"/LICENSE"
+	],
+	"main": "dist/ReCaptcha.js",
+	"types": "dist/ReCaptcha.d.ts",
+	"scripts": {
+		"build": "tsc",
+		"eslint:check": "eslint '{src,demo,cypress}/**/*.{js,ts}'",
+		"prettier:check": "prettier --check '{src,demo,cypress}/**/*.{ts,js}' '**/*.{json,yaml,yml}'",
+		"prettier:fix": "prettier --write '{src,demo,cypress}/**/*.{ts,js}' '**/*.{json,yaml,yml}'",
+		"cypress:run": "cypress run",
+		"cypress:open": "cypress open",
+		"demo": "webpack-dev-server --config demo/webpack.config.js --progress --port 30399"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.29.0",
+		"@typescript-eslint/parser": "^5.29.0",
+		"chai": "^4.3.6",
+		"cypress": "^10.2.0",
+		"eslint": "^8.18.0",
+		"eslint-config-alloy": "^4.5.1",
+		"html-webpack-plugin": "^5.5.0",
+		"prettier": "^2.7.1",
+		"ts-loader": "^9.3.1",
+		"typescript": "^4.7.4",
+		"webpack": "^5.73.0",
+		"webpack-cli": "^4.10.0",
+		"webpack-dev-server": "^4.9.2"
+	},
+	"eslintConfig": {
+		"extends": [
+			"alloy",
+			"alloy/typescript"
+		],
+		"env": {
+			"mocha": true
+		}
+	},
+	"dependencies": {
+		"@commitlint/cli": "^17.0.3",
+		"@commitlint/config-angular": "^17.0.3"
+	}
 }
