--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
 	"types": "dist/ReCaptcha.d.ts",
 	"scripts": {
 		"build": "tsc",
+		"commitlint:check": "commitlint --config .commitlintrc.yaml --edit",
 		"eslint:check": "eslint '{src,demo,cypress}/**/*.{js,ts}'",
+		"eslint:fix": "eslint --fix '{src,demo,cypress}/**/*.{js,ts}'",
 		"prettier:check": "prettier --check '{src,demo,cypress}/**/*.{ts,js}' '**/*.{json,yaml,yml}'",
 		"prettier:fix": "prettier --write '{src,demo,cypress}/**/*.{ts,js}' '**/*.{json,yaml,yml}'",
 		"cypress:run": "cypress run",
 		"cypress:open": "cypress open",
-		"demo": "webpack-dev-server --config demo/webpack.config.js --progress --port 30399"
+		"demo": "webpack-dev-server --config demo/webpack.config.js --progress --port 30399",
+		"prepare": "husky install"
 	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -44,7 +47,8 @@
 		"typescript": "^4.7.4",
 		"webpack": "^5.73.0",
 		"webpack-cli": "^4.10.0",
-		"webpack-dev-server": "^4.9.2"
+		"webpack-dev-server": "^4.9.2",
+		"husky": "^8.0.0"
 	},
 	"eslintConfig": {
 		"extends": [
