--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,10 +12,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
           node-version: 14
+      - uses: github/codeql-action/init@v2
+        with:
+          languages: javascript
       - uses: c-hive/gha-yarn-cache@v2
       - name: Install dependencies
         run: yarn install
