--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
 		"eslint": "^8.38.0",
 		"eslint-config-alloy": "^4.9.0",
 		"html-webpack-plugin": "^5.5.0",
+		"husky": "^8.0.3",
 		"prettier": "^2.8.7",
 		"ts-loader": "^9.4.2",
 		"typescript": "^4.8.4",
 		"webpack": "^5.79.0",
 		"webpack-cli": "^4.10.0",
-		"webpack-dev-server": "^4.13.2",
-		"husky": "^8.0.3"
+		"webpack-dev-server": "^4.13.2"
 	},
 	"eslintConfig": {
 		"extends": [
@@ -62,5 +62,6 @@
 	"dependencies": {
 		"@commitlint/cli": "^17.6.1",
 		"@commitlint/config-angular": "^17.6.1"
-	}
+	},
+	"packageManager": "yarn@3.5.0"
 }
