--- a/package.json
+++ b/package.json
@@ -15,53 +15,80 @@
 	},
 	"license": "Apache-2.0",
 	"author": "AurityLab <info@auritylab.com>",
+	"main": "dist/ReCaptcha.js",
+	"types": "dist/ReCaptcha.d.ts",
 	"files": [
 		"/dist",
 		"/README.md",
 		"/LICENSE"
 	],
-	"main": "dist/ReCaptcha.js",
-	"types": "dist/ReCaptcha.d.ts",
 	"scripts": {
 		"build": "tsc",
-		"commitlint:check": "commitlint --config .commitlintrc.yaml --edit",
+		"cypress:open": "cypress open",
+		"cypress:run": "cypress run",
+		"demo": "webpack-dev-server --config demo/webpack.config.js --progress --port 30399",
 		"eslint:check": "eslint '{src,demo,cypress}/**/*.{js,ts}'",
 		"eslint:fix": "eslint --fix '{src,demo,cypress}/**/*.{js,ts}'",
+		"postinstall": "husky install",
+		"prepack": "pinst --disable",
+		"postpack": "pinst --enable",
 		"prettier:check": "prettier --check '{src,demo,cypress}/**/*.{ts,js}' '**/*.{json,yaml,yml}'",
 		"prettier:fix": "prettier --write '{src,demo,cypress}/**/*.{ts,js}' '**/*.{json,yaml,yml}'",
-		"cypress:run": "cypress run",
-		"cypress:open": "cypress open",
-		"demo": "webpack-dev-server --config demo/webpack.config.js --progress --port 30399",
-		"prepare": "husky install"
+		"sort:check": "sort-package-json --check",
+		"sort:fix": "sort-package-json"
+	},
+	"commitlint": {
+		"extends": [
+			"@abinnovision/commitlint-config"
+		]
+	},
+	"lint-staged": {
+		"{src,demo,cypress}/**/*.{js,ts}": [
+			"eslint --fix",
+			"prettier --write"
+		],
+		"**/*.{json,yaml,yml}": [
+			"prettier --write"
+		],
+		"package.json": [
+			"sort-package-json"
+		]
+	},
+	"prettier": "@abinnovision/prettier-config",
+	"eslintConfig": {
+		"env": {
+			"mocha": true
+		},
+		"extends": [
+			"@abinnovision/base",
+			"@abinnovision/typescript",
+			"prettier"
+		]
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.58.0",
-		"@typescript-eslint/parser": "^5.58.0",
+		"@abinnovision/commitlint-config": "^1.1.0",
+		"@abinnovision/eslint-config-base": "^1.1.0",
+		"@abinnovision/eslint-config-typescript": "^1.1.0",
+		"@abinnovision/prettier-config": "^1.1.0",
+		"@commitlint/cli": "^17.6.1",
+		"@typescript-eslint/eslint-plugin": "^5.59.0",
+		"@typescript-eslint/parser": "^5.59.0",
 		"chai": "^4.3.7",
 		"cypress": "^10.11.0",
 		"eslint": "^8.38.0",
-		"eslint-config-alloy": "^4.9.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-import": "^2.27.5",
 		"html-webpack-plugin": "^5.5.0",
-		"husky": "^8.0.3",
+		"husky": "^8.0.0",
+		"lint-staged": "^13.2.1",
+		"pinst": "^3.0.0",
 		"prettier": "^2.8.7",
+		"sort-package-json": "^2.4.1",
 		"ts-loader": "^9.4.2",
 		"typescript": "^4.8.4",
 		"webpack": "^5.79.0",
 		"webpack-cli": "^4.10.0",
 		"webpack-dev-server": "^4.13.2"
-	},
-	"eslintConfig": {
-		"extends": [
-			"alloy",
-			"alloy/typescript"
-		],
-		"env": {
-			"mocha": true
-		}
-	},
-	"dependencies": {
-		"@commitlint/cli": "^17.6.1",
-		"@commitlint/config-angular": "^17.6.1"
 	},
 	"packageManager": "yarn@3.5.0"
 }
