chore: add fix/check scripts

--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
 	],
 	"scripts": {
 		"build": "tsc",
+		"check": "concurrently  'yarn eslint:check' 'yarn prettier:check' 'yarn sort:check'",
 		"cypress:open": "cypress open",
 		"cypress:run": "cypress run",
 		"demo": "webpack-dev-server --config demo/webpack.config.js --progress --port 30399",
 		"eslint:check": "eslint '{src,demo,cypress}/**/*.{js,ts}'",
 		"eslint:fix": "eslint --fix '{src,demo,cypress}/**/*.{js,ts}'",
+		"fix": "concurrently  'yarn eslint:fix' 'yarn prettier:fix' 'yarn sort:fix'",
 		"postinstall": "husky install",
 		"prepack": "pinst --disable",
 		"postpack": "pinst --enable",
@@ -74,6 +76,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
 		"@typescript-eslint/parser": "^5.59.0",
 		"chai": "^4.3.7",
+		"concurrently": "^8.0.1",
 		"cypress": "^10.11.0",
 		"eslint": "^8.38.0",
 		"eslint-config-prettier": "^8.8.0",
