--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"@abinnovision/eslint-config-typescript": "^1.1.0",
 		"@abinnovision/prettier-config": "^1.1.0",
 		"@commitlint/cli": "^17.6.1",
+		"@types/node": "^18.15.13",
 		"@typescript-eslint/eslint-plugin": "^5.59.0",
 		"@typescript-eslint/parser": "^5.59.0",
 		"chai": "^4.3.7",
@@ -88,7 +89,7 @@
 		"prettier": "^2.8.7",
 		"sort-package-json": "^2.4.1",
 		"ts-loader": "^9.4.2",
-		"typescript": "^4.8.4",
+		"typescript": "^5.0.4",
 		"webpack": "^5.79.0",
 		"webpack-cli": "^4.10.0",
 		"webpack-dev-server": "^4.13.2"
