--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,10 @@ jobs:
         run: yarn build
 
   test-e2e:
-    name: E2E Tests (Cypress)
+    name: Test / E2E Cypress (${{ matrix.browser }})
+    strategy:
+      matrix:
+        browser: [chrome, firefox, edge]
     runs-on: ubuntu-latest
     needs:
       - build
@@ -43,7 +46,7 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
 
-      - name: Cypress (Chrome)
+      - name: Run Cypress
         uses: cypress-io/github-action@v4
         with:
-          browser: chrome
+          browser: ${{ matrix.browser }}
