--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -13,6 +13,9 @@ on:
 jobs:
   codeql:
     runs-on: ubuntu-latest
+    env:
+      # Avoid installing Cypress binary in this job, because it's not being used.
+      CYPRESS_INSTALL_BINARY: "0"
     permissions:
       security-events: write
       packages: read
