--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,6 +21,9 @@ jobs:
       contents: "write"
       id-token: "write"
       packages: "write"
+    env:
+      # Avoid installing Cypress binary in this job, because it's not being used.
+      CYPRESS_INSTALL_BINARY: "0"
     steps:
       - name: Checkout
         uses: actions/checkout@v3
