build: update scripts

--- a/package.json
+++ b/package.json
@@ -25,18 +25,18 @@
 	],
 	"scripts": {
 		"build": "tsc",
-		"check": "concurrently 'yarn eslint:check' 'yarn prettier:check' 'yarn sort:check'",
+		"check": "concurrently 'yarn lint:check' 'yarn format:check' 'yarn sort:check'",
 		"cypress:open": "cypress open",
 		"cypress:run": "cypress run",
 		"demo": "parcel demo/src/index.html",
-		"eslint:check": "eslint '{src/**,demo/**,cypress/**,.}/*.{js,ts}'",
-		"eslint:fix": "eslint --fix '{src/**,demo/**,cypress/**,.}/*.{js,ts}'",
-		"fix": "concurrently 'yarn eslint:fix' 'yarn prettier:fix' 'yarn sort:fix'",
+		"fix": "concurrently 'yarn lint:fix' 'yarn format:fix' 'yarn sort:fix'",
+		"format:check": "prettier --check '{src/**,demo/**,cypress/**,.}/*.{ts,js,html}' '**/*.{json,json5,yaml,yml}'",
+		"format:fix": "prettier --write '{src/**,demo/**,cypress/**,.}/*.{ts,js,html}' '**/*.{json,json5,yaml,yml}'",
 		"postinstall": "husky install",
+		"lint:check": "eslint '{src/**,demo/**,cypress/**,.}/*.{js,ts}'",
+		"lint:fix": "eslint --fix '{src/**,demo/**,cypress/**,.}/*.{js,ts}'",
 		"prepack": "pinst --disable",
 		"postpack": "pinst --enable",
-		"prettier:check": "prettier --check '{src/**,demo/**,cypress/**,.}/*.{ts,js,html}' '**/*.{json,json5,yaml,yml}'",
-		"prettier:fix": "prettier --write '{src/**,demo/**,cypress/**,.}/*.{ts,js,html}' '**/*.{json,json5,yaml,yml}'",
 		"sort:check": "sort-package-json --check",
 		"sort:fix": "sort-package-json"
 	},
