--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,5 @@
+compressionLevel: mixed
+
 nodeLinker: node-modules
-yarnPath: .yarn/releases/yarn-3.5.0.cjs
+
+yarnPath: .yarn/releases/yarn-4.0.2.cjs
