--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,30 +4,50 @@ on:
   push:
     branches:
       - master
-  pull_request:
+  pull_request_target:
     branches:
       - master
 
 jobs:
+  # Configure the commit SHA to use.
+  configure:
+    name: Configure
+    runs-on: ubuntu-22.04
+    timeout-minutes: 2
+    outputs:
+      commit-sha: ${{ env.COMMIT_SHA }}
+    steps:
+      - name: Evaluate commit
+        run: |
+          if [[ "${{ github.event_name }}" == "pull_request_target" ]]; then
+              echo "PR is #${{ github.event.number }}..."
+              echo "PR Head SHA is ${{ github.event.pull_request.head.sha }}..."
+              echo "COMMIT_SHA=${{ github.event.pull_request.head.sha }}" >> $GITHUB_ENV
+          else
+              echo "Head SHA is ${{ github.sha }}..."
+              echo "COMMIT_SHA=${{ github.sha }}" >> $GITHUB_ENV
+          fi
+
   build:
     name: Check & Build
     runs-on: ubuntu-latest
+    needs:
+      - configure
     env:
       # Avoid installing Cypress binary in this job, because it's not being used.
       CYPRESS_INSTALL_BINARY: "0"
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.configure.outputs.commit-sha }}
       - name: Setup Node
         uses: abinnovision/actions/actions/setup-node@master
-
       - name: Install dependencies
         run: yarn install --immutable
-
       # Lint & Format
       - name: Check
         run: yarn check
-
       # Build
       - name: Build
         run: yarn build
@@ -39,17 +59,56 @@ jobs:
         browser: [chrome, firefox, edge]
     runs-on: ubuntu-latest
     needs:
-      - build
+      - configure
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Node
         uses: abinnovision/actions/actions/setup-node@master
-
       - name: Install dependencies
         run: yarn install --immutable
-
       - name: Run Cypress
         uses: cypress-io/github-action@v4
         with:
           browser: ${{ matrix.browser }}
+
+  release:
+    name: Release
+    needs:
+      - configure
+      - build
+      - test-e2e
+    uses: abinnovision/workflows/.github/workflows/release-please.yaml@master
+    secrets: inherit
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+
+  publish:
+    name: Publish
+    runs-on: ubuntu-latest
+    needs:
+      - configure
+      - release
+    if: needs.release.outputs.releases_created
+    permissions:
+      contents: "write"
+      id-token: "write"
+      packages: "write"
+    env:
+      # Avoid installing Cypress binary in this job, because it's not being used.
+      CYPRESS_INSTALL_BINARY: "0"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.configure.outputs.commit-sha }}
+      - name: Setup Node
+        uses: abinnovision/actions/actions/setup-node@master
+      - name: Install
+        run: yarn install --immutable
+      - name: Build
+        run: yarn build
+      - name: Publish
+        run: |
+          # Publish to NPM
+          yarn config set -H --json npmScopes '{"abinnovision": {"npmPublishRegistry": "https://registry.npmjs.org", "npmRegistryServer": "https://registry.npmjs.org", "npmAuthToken": "${{ secrets.NPM_AUTH_TOKEN }}"}}'
+          yarn npm publish --access public
