--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,9 +33,6 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - configure
-    env:
-      # Avoid installing Cypress binary in this job, because it's not being used.
-      CYPRESS_INSTALL_BINARY: "0"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -56,7 +53,7 @@ jobs:
     name: Test / E2E Cypress (${{ matrix.browser }})
     strategy:
       matrix:
-        browser: [chrome, firefox, edge]
+        browser: [chromium, firefox, webkit]
     runs-on: ubuntu-latest
     needs:
       - configure
@@ -67,10 +64,10 @@ jobs:
         uses: abinnovision/actions/actions/setup-node@master
       - name: Install dependencies
         run: yarn install --immutable
-      - name: Run Cypress
-        uses: cypress-io/github-action@v6
-        with:
-          browser: ${{ matrix.browser }}
+      - name: Install Playwright
+        run: yarn playwright install --with-deps
+      - name: Run tests
+        run: yarn test:integration --browser ${{ matrix.browser }}
 
   release:
     name: Release
@@ -93,9 +90,6 @@ jobs:
       contents: "write"
       id-token: "write"
       packages: "write"
-    env:
-      # Avoid installing Cypress binary in this job, because it's not being used.
-      CYPRESS_INSTALL_BINARY: "0"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
