--- a/package.json
+++ b/package.json
@@ -26,19 +26,19 @@
 	"scripts": {
 		"build": "tsc",
 		"check": "concurrently 'yarn lint:check' 'yarn format:check' 'yarn sort:check'",
-		"cypress:open": "cypress open",
-		"cypress:run": "cypress run",
 		"demo": "parcel demo/src/index.html",
 		"fix": "concurrently 'yarn lint:fix' 'yarn format:fix' 'yarn sort:fix'",
-		"format:check": "prettier --check '{src/**,demo/**,cypress/**,.}/*.{ts,js,html}' '**/*.{json,json5,yaml,yml}'",
-		"format:fix": "prettier --write '{src/**,demo/**,cypress/**,.}/*.{ts,js,html}' '**/*.{json,json5,yaml,yml}'",
+		"format:check": "prettier --check '{src/**,demo/**,test/**,.}/*.{ts,js,html}' '**/*.{json,json5,yaml,yml}'",
+		"format:fix": "prettier --write '{src/**,demo/**,test/**,.}/*.{ts,js,html}' '**/*.{json,json5,yaml,yml}'",
 		"postinstall": "husky install",
-		"lint:check": "eslint '{src/**,demo/**,cypress/**,.}/*.{js,ts}'",
-		"lint:fix": "eslint --fix '{src/**,demo/**,cypress/**,.}/*.{js,ts}'",
+		"lint:check": "eslint '{src/**,demo/**,test/**,.}/*.{js,ts}'",
+		"lint:fix": "eslint --fix '{src/**,demo/**,test/**,.}/*.{js,ts}'",
 		"prepack": "pinst --disable",
 		"postpack": "pinst --enable",
 		"sort:check": "sort-package-json --check",
-		"sort:fix": "sort-package-json"
+		"sort:fix": "sort-package-json",
+		"test-integration": "vitest run",
+		"test-integration:watch": "vitest watch"
 	},
 	"commitlint": {
 		"extends": [
@@ -46,11 +46,11 @@
 		]
 	},
 	"lint-staged": {
-		"{src/**,demo/**,cypress/**,.}/*.{js,ts}": [
+		"{src/**,demo/**,test/**,.}/*.{js,ts}": [
 			"eslint --fix",
 			"prettier --write"
 		],
-		"{src/**,demo/**,cypress/**,.}/*.{ts,js,html}": [
+		"{src/**,demo/**,test/**,.}/*.{ts,js,html}": [
 			"prettier --write"
 		],
 		"**/*.{json,json5,yaml,yml}": [
@@ -69,18 +69,23 @@
 		"@commitlint/cli": "^18.4.1",
 		"@types/eslint": "^8.44.7",
 		"@types/node": "^20.9.0",
+		"@vitest/browser": "^2.0.5",
 		"chai": "^4.3.10",
 		"concurrently": "^8.2.2",
-		"cypress": "^13.5.0",
 		"eslint": "^8.53.0",
 		"globals": "^13.23.0",
+		"happy-dom": "^14.12.3",
+		"http-server": "^14.1.1",
 		"husky": "^8.0.0",
 		"lint-staged": "^15.1.0",
 		"parcel": "^2.10.2",
 		"pinst": "^3.0.0",
+		"playwright": "^1.46.0",
 		"prettier": "^2.8.8",
 		"sort-package-json": "^2.6.0",
-		"typescript": "^5.2.2"
+		"start-server-and-test": "^2.0.5",
+		"typescript": "^5.2.2",
+		"vitest": "^2.0.5"
 	},
 	"packageManager": "yarn@4.0.2"
 }
