--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,6 +3,7 @@
 	"bootstrap-sha": "d6d3e39d221c694b6e900ad838f5fa10c07f5ab2",
 	"changelog-path": "CHANGELOG.md",
 	"release-type": "node",
+	"include-component-in-tag": false,
 	"packages": {
 		".": {}
 	}
