build: upgrade nodejs and yarn

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,4 +2,7 @@ compressionLevel: mixed
 
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-4.0.2.cjs
+# The public @abinnovision packages are published to the npm registry.
+npmScopes:
+  abinnovision:
+    npmRegistryServer: https://registry.npmjs.org
