--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
         with:
           ref: ${{ needs.configure.outputs.commit-sha }}
       - name: Setup Node
-        uses: abinnovision/actions/actions/setup-node@master
+        uses: abinnovision/actions@setup-node-v1
       - name: Install dependencies
         run: yarn install --immutable
       # Lint & Format
@@ -61,7 +61,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Setup Node
-        uses: abinnovision/actions/actions/setup-node@master
+        uses: abinnovision/actions@setup-node-v1
       - name: Install dependencies
         run: yarn install --immutable
       - name: Install Playwright
@@ -96,7 +96,7 @@ jobs:
         with:
           ref: ${{ needs.configure.outputs.commit-sha }}
       - name: Setup Node
-        uses: abinnovision/actions/actions/setup-node@master
+        uses: abinnovision/actions@setup-node-v1
       - name: Install
         run: yarn install --immutable
       - name: Build
